--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.26)
 project(src)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -31,6 +31,38 @@ add_executable(src WIN32
         src/engine/scene/Scene.h
         src/engine/servers/SceneServer.cpp
         src/engine/servers/SceneServer.h
+        src/engine/servers/ShaderCompiler.cpp
+        src/engine/servers/ShaderCompiler.h
+        src/engine/entity/VisualEntity.cpp
+        src/engine/entity/VisualEntity.h
+        src/engine/render/Material.cpp
+        src/engine/render/Material.h
+        src/engine/entity/TriangleVisual.cpp
+        src/engine/entity/TriangleVisual.h
+        src/engine/data/Mesh.cpp
+        src/engine/data/Mesh.h
+#        src/engine/render/ShaderProgramTemplate.cpp
+        src/engine/render/ShaderProgramTemplate.h
+        src/engine/render/VertexShader.cpp
+        src/engine/render/VertexShader.h
+        src/engine/render/ShaderUtils.cpp
+        src/engine/render/ShaderUtils.h
+        src/engine/render/PixelShader.cpp
+        src/engine/render/PixelShader.h
+        src/engine/render/Shader.cpp
+        src/engine/render/Shader.h
+        src/engine/render/ConstBufferData.cpp
+        src/engine/render/ConstBufferData.h
+        src/engine/servers/TimeServer.cpp
+        src/engine/servers/TimeServer.h
 )
 
 target_link_libraries(src d3d9 d3d11 d3dcompiler dinput8 dxguid)
+
+add_custom_target(copy_data
+        COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
+        "${CMAKE_CURRENT_SOURCE_DIR}/Assets/"
+        $<TARGET_FILE_DIR:${PROJECT_NAME}>/Assets
+        COMMENT "Copying data"
+)
+add_dependencies(${PROJECT_NAME} copy_data)
