--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-cmake-build-debug
+**/cmake-build-debug
+**/CMakeCache.txt
+**/cmake_install.cmake
+**/install_manifest.txt
+**/CMakeFiles/
+**/CTestTestfile.cmake
+**/Makefile
+**/*.cbp
+**/CMakeScripts
+**/compile_commands.json
 
 ### C++ template
 # Compiled Object files
