Some small changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,8 @@ add_executable(${PROJECT_NAME} WIN32
         src/game/StarsCamera.h
         src/engine/servers/RenderPipelineServer.cpp
         src/engine/servers/RenderPipelineServer.h
+        src/engine/render/BlendState.cpp
+        src/engine/render/BlendState.h
 )
 
 target_link_libraries(${PROJECT_NAME} d3d9 d3d11 d3dcompiler dinput8 dxguid)
