--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,11 @@ add_executable(${PROJECT_NAME} WIN32
         src/engine/servers/RenderPipelineServer.h
         src/engine/render/BlendState.cpp
         src/engine/render/BlendState.h
+        src/game/ShipController.cpp
+        src/game/ShipController.h
+        src/engine/entity/VisualMeshEntity.cpp
+        src/engine/entity/VisualMeshEntity.h
+        src/engine/NightScapeEngine.h
 )
 
 target_link_libraries(${PROJECT_NAME} d3d9 d3d11 d3dcompiler dinput8 dxguid)
