some game updates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,8 @@ add_executable(${PROJECT_NAME} WIN32
         src/engine/entity/VisualMeshEntity.cpp
         src/engine/entity/VisualMeshEntity.h
         src/engine/NightScapeEngine.h
+        src/game/ShipRadarController.cpp
+        src/game/ShipRadarController.h
 )
 
 target_link_libraries(${PROJECT_NAME} d3d9 d3d11 d3dcompiler dinput8 dxguid)
