Late night refactoring stuff... Moved ConstantBuffer from shader to material which should've been from the start. Now there's no need for ConstantBufferData separation. Planning to replace ConstantBuffer with GraphicsBuffer next commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,9 +108,11 @@ add_executable(${PROJECT_NAME} WIN32
         src/engine/data/Light.h
         src/engine/addon/DDSTextureLoader11.cpp
         src/engine/addon/DDSTextureLoader11.h
-        src/engine/NSECommon.h
+        src/engine/nsepch.h
         src/engine/data/LightsProperties.cpp
         src/engine/data/LightsProperties.h
+        src/engine/entity/ParticleSystem.cpp
+        src/engine/entity/ParticleSystem.h
 )
 
 target_link_libraries(${PROJECT_NAME} d3d9 d3d11 d3dcompiler dinput8 dxguid)
