Added Graphics Buffer, not tested and not refactored

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,8 @@ add_executable(${PROJECT_NAME} WIN32
         src/engine/data/LightsProperties.h
         src/engine/entity/ParticleSystem.cpp
         src/engine/entity/ParticleSystem.h
+        src/engine/render/GraphicsBuffer.cpp
+        src/engine/render/GraphicsBuffer.h
 )
 
 target_link_libraries(${PROJECT_NAME} d3d9 d3d11 d3dcompiler dinput8 dxguid)
