--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,8 @@ add_executable(${PROJECT_NAME} WIN32
         src/game/data/INavigatable.h
         src/game/ShipMarkersVisual.cpp
         src/game/ShipMarkersVisual.h
+        src/game/ItemVisualUI.cpp
+        src/game/ItemVisualUI.h
 )
 
 target_link_libraries(${PROJECT_NAME} d3d9 d3d11 d3dcompiler dinput8 dxguid)
