--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,6 +164,7 @@ add_executable(${PROJECT_NAME} WIN32
         src/game/data/InventoryItemStack.h
         src/game/data/InventoryItemDescription.cpp
         src/game/data/InventoryItemDescription.h
+        src/game/data/ITargetable.h
 )
 
 target_link_libraries(${PROJECT_NAME} d3d9 d3d11 d3dcompiler dinput8 dxguid)
