Experimenting with weapons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,11 @@ add_executable(${PROJECT_NAME} WIN32
         src/game/data/InventoryItemDescription.cpp
         src/game/data/InventoryItemDescription.h
         src/game/data/ITargetable.h
+        src/game/ship/WeaponEntity.cpp
+        src/game/ship/WeaponEntity.h
+        src/game/ship/PulseWeaponEntity.cpp
+        src/game/ship/PulseWeaponEntity.h
+        src/game/data/ProjectileData.h
 )
 
 target_link_libraries(${PROJECT_NAME} d3d9 d3d11 d3dcompiler dinput8 dxguid)
